small fixes for dashboard and altered collapsing

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,3 +1,9 @@
+.container {
+   min-width:1029px;
+   width: auto !important;
+   width:1029px;            
+}
+
 #observe_panel .scaledimg {
   width: 100%;
   min-height: 150px;
@@ -5,6 +11,10 @@
   background-position: center;
 }
  
+.readable{
+  overflow: hidden;
+}
+
 .timeline {
 	list-style: none;
 	padding: 20px 0 20px 0;
